--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,8 @@ services:
     ports:
       - "8001:8000"
     restart: unless-stopped
+    volumes:
+      - ./documents:/app/documents  
 
   frontend:
     build:
